--- a/.github/workflows/trigger-github-workflow.yaml
+++ b/.github/workflows/trigger-github-workflow.yaml
@@ -15,6 +15,9 @@ jobs:
 
     steps:
 
+    - name: Checkout the repository to the runner
+      uses: actions/checkout@v3
+
     - name: Trigger Workflow
       run: |
         gh workflow run 'CD NON-PROD VOL API' \
