--- a/.github/workflows/trigger-github-workflow.yaml
+++ b/.github/workflows/trigger-github-workflow.yaml
@@ -29,7 +29,7 @@ jobs:
     
     - name: Monitor Workflow Execution Progress
       run: |
-        runID=`gh run list --workflow='CD NON-PROD VOL API' -R dvsa/dvsa-container-registry | sed -n 1p | awk '{ print $(NF-2) }'`
+        runID=`gh run list --workflow='CD NON-PROD VOL API' -R dvsa/dvsa-container-registry -b feature/AWSRESET1-514 | sed -n 1p | awk '{ print $(NF-2) }'`
         gh run watch $runID -i1
       env:
         GITHUB_TOKEN: ${{ secrets.gh_token }}
