--- a/.github/workflows/trigger-github-workflow.yaml
+++ b/.github/workflows/trigger-github-workflow.yaml
@@ -18,14 +18,23 @@ jobs:
     - name: Checkout the repository to the runner
       uses: actions/checkout@v3
 
+    # - name: Trigger Workflow
+    #   run: |
+    #     gh workflow run 'CD NON-PROD VOL API' \
+    #       -R dvsa/dvsa-container-registry \
+    #       --ref feature/AWSRESET1-514 \
+    #       -f vol_api_image_tag=vol-api-7.4.33-alpine-fpm-ddea10a
+      # env:
+      #   GITHUB_TOKEN: ${{ secrets.gh_token }}
     - name: Trigger Workflow
       run: |
-        gh workflow run 'CD NON-PROD VOL API' \
-          -R dvsa/dvsa-container-registry \
-          --ref feature/AWSRESET1-514 \
-          -f vol_api_image_tag=vol-api-7.4.33-alpine-fpm-ddea10a
-      env:
-        GITHUB_TOKEN: ${{ secrets.gh_token }}
+        curl \
+            -X POST \
+            -H "authorization: Bearer  ${{ secrets.gh_token }}" \
+            -H "Accept: application/vnd.github.v3+json" \
+            https://api.github.com/repos/dvsa/dvsa-container-registry/actions/workflows/nonprod-vol-api-manual-cd/dispatches \
+            -d '{"ref":"feature/AWSRESET1-514","inputs":{"vol_api_image_tag":"vol-api-7.4.33-alpine-fpm-ddea10a"}}'
+
     
     - name: Monitor Workflow Execution Progress
       run: |
