--- a/.github/workflows/trigger-github-workflow.yaml
+++ b/.github/workflows/trigger-github-workflow.yaml
@@ -38,7 +38,13 @@ jobs:
     
     - name: Monitor Workflow Execution Progress
       run: |
-        runID=`gh run list -w 'CD NON-PROD VOL API' --repo dvsa/dvsa-container-registry -L 1 --json databaseId | jq '.[]| .databaseId'`
-        gh run watch $runID -i1
+        runID=`curl -L -H \
+                "Accept: application/vnd.github+json" \
+                -H "Authorization: Bearer ${{ secrets.gh_token }}" \
+                -H "X-GitHub-Api-Version: 2022-11-28" \
+                https://api.github.com/repos/dvsa/dvsa-container-registry/actions/runs |\
+                jq -r '.workflow_runs[0]|select(.name == "CD NON-PROD VOL API").id'`
+        echo $runID
+        # gh run watch $runID -i1
       env:
         GITHUB_TOKEN: ${{ secrets.gh_token }}
