AWSRESET1-514: CI/CD Vol API on Static & DEV

--- a/.github/workflows/trigger-github-workflow.yaml
+++ b/.github/workflows/trigger-github-workflow.yaml
@@ -38,6 +38,7 @@ jobs:
     
     - name: Monitor Workflow Execution Progress
       run: |
+        sleep 10
         runID=`curl -L -H \
                 "Accept: application/vnd.github+json" \
                 -H "Authorization: Bearer ${{ secrets.gh_token }}" \
