--- a/.github/workflows/trigger-github-workflow.yaml
+++ b/.github/workflows/trigger-github-workflow.yaml
@@ -45,6 +45,6 @@ jobs:
                 -H "X-GitHub-Api-Version: 2022-11-28" \
                 https://api.github.com/repos/dvsa/dvsa-container-registry/actions/runs |\
                 jq -r '.workflow_runs[0]|select(.name == "CD NON-PROD VOL API" and .status == "in_progress").id'`
-        gh run watch $runID -i1 -R dvsa/dvsa-container-registry
+        gh run watch $runID --interval 10 --exit-status 1  -R dvsa/dvsa-container-registry
       env:
         GITHUB_TOKEN: ${{ secrets.gh_token }}
