AWSRESET1-514: CI/CD Vol API on Static & DEV

--- a/.github/workflows/trigger-github-workflow.yaml
+++ b/.github/workflows/trigger-github-workflow.yaml
@@ -6,7 +6,7 @@ on:
       branch:
         description: 'Name of the branch which contains the given Workflow'
         default: 'feature/AWSRESET1-514'
-        required: true
+        required: false
         type: string
     secrets:
       gh_token:
