--- a/.github/workflows/trigger-github-workflow.yaml
+++ b/.github/workflows/trigger-github-workflow.yaml
@@ -5,7 +5,7 @@ on:
     inputs:
       branch:
         description: 'Name of the branch which contains the given Workflow'
-        default: 'feature/AWSRESET1-514'
+        default: 'main'
         required: false
         type: string
     secrets:
