--- a/.github/workflows/trigger-github-workflow.yaml
+++ b/.github/workflows/trigger-github-workflow.yaml
@@ -18,6 +18,11 @@ on:
         default: ''
         required: true
         type: string
+      vol_api_image_tag:
+        description: 'VOL API image tag'
+        default: ''
+        required: true
+        type: string
     secrets:
       gh_token:
         required: true
@@ -39,7 +44,8 @@ jobs:
         gh workflow run '${{ inputs.workflow_name }}' \
           -R ${{ inputs.git_repository }} \
           --ref ${{ inputs.branch }} \
-          -f vol_api_image_tag=vol-api-7.4.33-alpine-fpm-ddea10a
+          -f vol_api_image_tag=${{ inputs.vol_api_image_tag }}
+        sleep 60 # required to assign the run-id to worflow
       env:
         GITHUB_TOKEN: ${{ secrets.gh_token }}
     # - name: Trigger Workflow
@@ -54,13 +60,12 @@ jobs:
     
     - name: Monitor Workflow Execution Progress
       run: |
-        sleep 60 # required to assign the run-id to worflow
-        runID=`curl -L -H \
+        runID=`curl -L -H \ # Use the filter select(.name == "${{ inputs.workflow_name }}" and .status == "in_progress").id if no Perf issues for Git API
                 "Accept: application/vnd.github+json" \
                 -H "Authorization: Bearer ${{ secrets.gh_token }}" \
                 -H "X-GitHub-Api-Version: 2022-11-28" \
                 https://api.github.com/repos/${{ inputs.git_repository }}/actions/runs |\
-                jq -r '.workflow_runs[0]|select(.name == "${{ inputs.workflow_name }}" and .status == "in_progress").id'`
+                jq -r '.workflow_runs[0]|select(.name == "${{ inputs.workflow_name }}").id'`
         gh run watch $runID --interval 10 --exit-status 1  -R ${{ inputs.git_repository }}
       env:
         GITHUB_TOKEN: ${{ secrets.gh_token }}
