--- a/.github/workflows/non-prod-vol-api-build-deploy.yaml
+++ b/.github/workflows/non-prod-vol-api-build-deploy.yaml
@@ -304,26 +304,26 @@ jobs:
   #     #   #   }
   #     #   #   })
 
-    deploy-on-non-prod-cluster:
+    # deploy-on-non-prod-cluster:
 
-      name: Deploy on Non Prod Cluster
-      # needs:
-      # -  build-test-push-sign-image
-      # if: github.event_name == 'pull_request'
-      uses: ./.github/workflows/trigger-github-workflow.yaml
-      with:
-        branch: 'feature/AWSRESET1-514'
-        git_repository: 'dvsa/dvsa-container-registry'
-        workflow_name: 'CD NON-PROD VOL API'
-        vol_api_image_tag: 'vol-api-7.4.33-alpine-fpm-ddea10a'
-      secrets:
-        gh_token: ${{ secrets.DVSA_VOL_TERRAFORM_ACCESS_TOKEN }}
+    #   name: Deploy on Non Prod Cluster
+    #   # needs:
+    #   # -  build-test-push-sign-image
+    #   # if: github.event_name == 'pull_request'
+    #   uses: ./.github/workflows/trigger-github-workflow.yaml
+    #   with:
+    #     branch: 'feature/AWSRESET1-514'
+    #     git_repository: 'dvsa/dvsa-container-registry'
+    #     workflow_name: 'CD NON-PROD VOL API'
+    #     vol_api_image_tag: 'vol-api-7.4.33-alpine-fpm-ddea10a'
+    #   secrets:
+    #     gh_token: ${{ secrets.DVSA_VOL_TERRAFORM_ACCESS_TOKEN }}
 
     qa-artifact-approval:
 
       name: QA VOL API Image Approval
-      needs:
-      -  deploy-on-non-prod-cluster
+      # needs:
+      # -  deploy-on-non-prod-cluster
       # if: github.event_name == 'pull_request'
       uses: ./.github/workflows/trigger-github-workflow.yaml
       with:
@@ -332,7 +332,7 @@ jobs:
         workflow_name: 'QA VOL API ARTIFACT APPROVAL'
         vol_api_image_tag: 'vol-api-7.4.33-alpine-fpm-ddea10a'
       secrets:
-        gh_token: ${{ secrets.GITHUB_TOKEN }}
+        gh_token: ${{ secrets.DVSA_VOL_TERRAFORM_ACCESS_TOKEN }}
 
   # qa-artifact-approval:
 
