AWSRESET1-514: CI/CD Vol API on Static & DEV

--- a/.github/workflows/non-prod-vol-api-build-deploy.yaml
+++ b/.github/workflows/non-prod-vol-api-build-deploy.yaml
@@ -2,7 +2,7 @@ name: CI/CD NON PROD VOL API
 run-name: CI/CD NON PROD VOL API
 
 on:
-  pull_request:
+  push:
     # types: ['labeled']
     # push:
     branches:
