--- a/.github/workflows/static-vol-api-build-deploy.yaml
+++ b/.github/workflows/static-vol-api-build-deploy.yaml
@@ -3,7 +3,7 @@ run-name: CI/CD STATIC VOL API
 
 on:
   pull_request:
-    # types: ['labeled']
+    types: ['labeled']
     branches:
       - master
 
