--- a/.github/workflows/static-vol-api-build-deploy.yaml
+++ b/.github/workflows/static-vol-api-build-deploy.yaml
@@ -28,7 +28,7 @@ jobs:
   build:
 
     name: Build VOL API
-    if: github.event_name == 'pull_request' && github.event.label.name == 'ci ready'
+    if: github.event_name == 'pull_request' && (github.event.label.name == 'ci ready' or && github.event.label.name == 'cd ready')
     runs-on: ubuntu-latest
 
     steps:
@@ -80,7 +80,7 @@ jobs:
   build-test-push-sign-image:
 
     name: Build, Push & Sign Image
-    if: github.event_name == 'pull_request' && github.event.label.name == 'ci ready'
+    if: github.event_name == 'pull_request' && (github.event.label.name == 'ci ready' or && github.event.label.name == 'cd ready')
     runs-on: ubuntu-latest
 
     needs:
