AWSRESET1-514: Added workflows

--- a/.github/workflows/static-vol-api-build-deploy.yaml
+++ b/.github/workflows/static-vol-api-build-deploy.yaml
@@ -5,9 +5,9 @@ on:
   pull_request_review:
     # branches:
     #     - feature/**
-  # pull_request:
-    # branches:
-    #   - master
+  pull_request:
+    branches:
+      - master
 
 env:
   AWS_REGION : ${{ vars.DVSA_AWS_REGION }}
