--- a/.github/actions/build-vol-api/action.yaml
+++ b/.github/actions/build-vol-api/action.yaml
@@ -30,9 +30,9 @@ runs:
           --exclude=config/autoload/local.php.dist composer.lock init_autoloader.php config module public data/autoload data/cache vendor
       shell: bash
 
-    - name: Save Artifact
-      uses: actions/upload-artifact@v3
-      with:
-        name: VOL_API_Artifact
-        path: ./backend.tar.gz
-        retention-days: 1
+    # - name: Save Artifact
+    #   uses: actions/upload-artifact@v3
+    #   with:
+    #     name: VOL_API_Artifact
+    #     path: ./backend.tar.gz
+    #     retention-days: 1
