AWSRESET1-514: Added workflows

--- a/.github/workflows/static-vol-api-build-deploy.yaml
+++ b/.github/workflows/static-vol-api-build-deploy.yaml
@@ -45,8 +45,8 @@ jobs:
     name: Build, Push & Sign Image
     runs-on: ubuntu-latest
 
-    needs:
-    - build
+    # needs:
+    # - build
 
     steps:
 
