--- a/.github/workflows/static-vol-api-build-deploy.yaml
+++ b/.github/workflows/static-vol-api-build-deploy.yaml
@@ -3,6 +3,7 @@ run-name: CI/CD STATIC VOL API
 
 on:
   pull_request_review:
+    types: [edited, submitted]
   pull_request:
     branches:
       - master
@@ -21,13 +22,13 @@ jobs:
 
   dockerfile-lint-check:
     name: Dockerfile Lint Check
-    if: github.event_name == 'pull_request_review' || github.event.review.state != 'APPROVED'
+    if: github.event_name == 'pull_request' && github.event_name != 'pull_request_review'
     uses: ./.github/workflows/docker-hadolint.yaml
 
   unit-tests:
 
     name: Run Unit Tests
-    if: github.event_name == 'pull_request_review' || github.event.review.state != 'APPROVED'
+    if: github.event_name == 'pull_request' && github.event_name != 'pull_request_review'
     runs-on: ubuntu-latest
 
     steps:
@@ -43,6 +44,7 @@ jobs:
   build-test-push-sign-image:
 
     name: Build, Push & Sign Image
+    if: github.event_name == 'pull_request' && github.event_name != 'pull_request_review'
     runs-on: ubuntu-latest
 
     # needs:
@@ -56,13 +58,8 @@ jobs:
     - name: Build VOL API artifact
       uses: dvsa/olcs-backend/.github/actions/build-vol-api@feature/AWSRESET1-514
 
-    # - name: Download VOL API artifact
-    #   uses: actions/download-artifact@v3.0.2
-    #   with:
-    #     name: VOL_API_Artifact
-    #     path: ./
-
     - name: Set BASE_IMAGE & VOL_API_IMAGE_TAG
+      if: github.event.review.state != 'APPROVED'
       run: |
         envsubst < dockerfile | tee dockerfile.tmp
         mv dockerfile.tmp dockerfile
@@ -71,6 +68,7 @@ jobs:
         echo "VOL_API_IMAGE_TAG=pr-approved-vol-api-${BASE_IMAGE#*:}-$(git rev-parse --short HEAD)" >> $GITHUB_ENV
 
     - name: Configure AWS credentials on Shared Core ECR
+      if: github.event.review.state != 'APPROVED'
       uses: aws-actions/configure-aws-credentials@v4.0.1
       with:
         role-to-assume: ${{ secrets.DVSA_AWS_ROLE_SHAREDCORECR }}
@@ -78,21 +76,25 @@ jobs:
         aws-region: ${{ vars.DVSA_AWS_REGION }}
 
     - name: Login to Shared Core ECR
+      if: github.event.review.state != 'APPROVED'
       id: login-ecr-sharedcoreecr
       uses: aws-actions/amazon-ecr-login@v2.0.1
 
     - name: Verify base image
+      if: github.event.review.state != 'APPROVED'
       uses: dvsa/olcs-backend/.github/actions/image-integrity@feature/AWSRESET1-514
       with:
         ecr_tagged_image: $BASE_IMAGE
         image_sign_inspect: 'true'
 
     - name: Build VOL API image
+      if: github.event.review.state != 'APPROVED'
       run: |
         docker build -t ${VOL_NONPROD_TOOLING_REPO_URL}:${VOL_API_IMAGE_TAG} \
           --build-arg DVSA_AWS_SHAREDCOREECR_ID=${{secrets.DVSA_AWS_SHAREDCOREECR_ID}} .
 
     - name: Snyk scan VOL API image
+      if: github.event.review.state != 'APPROVED'
       id: scan-api-image
       uses: snyk/actions/docker@master
       env:
@@ -130,7 +132,9 @@ jobs:
     name: Deploy on Static ECS Cluster
     if: github.event.review.state == 'APPROVED'
     needs:
-    -  build-test-push-sign-image
+    - dockerfile-lint-check
+    - unit-tests
+    - build-test-push-sign-image
     runs-on: ubuntu-latest
 
     steps:
