--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
             "type": "composer",
             "url": "https://nexus.olcs.dev-dvsacloud.uk/repository/Packagist-Proxy",
             "only": [
-                "olcs/olcs-logging"
+                "olcs/olcs-logging",
+                "olcs/olcs-utils"
             ]
         },
         {
@@ -42,7 +43,7 @@
         "olcs/olcs-laminas": "~2.5.0",
         "olcs/olcs-logging": "^5.0.0",
         "olcs/olcs-transfer": "~4.206.0",
-        "olcs/olcs-utils": "~4.206.0",
+        "olcs/olcs-utils": "^5.0.0",
         "olcs/olcs-xmltools": "~4.206.0",
         "oro/doctrine-extensions": "^2",
         "phprtflite/phprtflite": "~1.3.3",
