--- a/composer.json
+++ b/composer.json
@@ -6,24 +6,20 @@
             "packagist": false
         },
         {
+            "url": "git@repo.olcs.dev-dvsacloud.uk:olcs/olcs-transfer.git",
+            "type": "vcs"
+        },
+        {
+            "url": "git@repo.olcs.dev-dvsacloud.uk:olcs/olcs-laminas.git",
+            "type": "vcs"
+        },
+        {
             "type": "composer",
             "url": "https://nexus.olcs.dev-dvsacloud.uk/repository/Packagist-Proxy",
             "only": [
                 "olcs/olcs-logging",
                 "olcs/olcs-utils"
             ]
-        },
-        {
-            "url": "git@repo.olcs.dev-dvsacloud.uk:olcs/olcs-transfer.git",
-            "type": "vcs"
-        },
-        {
-            "url": "git@repo.olcs.dev-dvsacloud.uk:olcs/olcs-xmltools.git",
-            "type": "vcs"
-        },
-        {
-            "url": "git@repo.olcs.dev-dvsacloud.uk:olcs/olcs-laminas.git",
-            "type": "vcs"
         },
         {
             "url": "https://nexus.olcs.dev-dvsacloud.uk/repository/OLCS",
@@ -57,7 +53,7 @@
         "olcs/olcs-logging": "^5.0.0",
         "olcs/olcs-transfer": "dev-project/3.0",
         "olcs/olcs-utils": "^5.0.0",
-        "olcs/olcs-xmltools": "dev-project/3.0",
+        "olcs/olcs-xmltools": "~4.206.0",
         "oro/doctrine-extensions": "^2",
         "phprtflite/phprtflite": "~1.3.3",
         "phpseclib/phpseclib": "^2.0.6",
