--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,12 @@ data/db/live-like-data.sql
 data/db/test-olcs-refdata.sql
 test/coverage/
 .scannerwork/
+.phpunit.result.cache
+
+# Non-dist files for the static analysis.
+# This allows developers to set a different (more strict) static analysis locally.
+phpcs.xml
+phpstan.neon
+phpunit.xml
+psalm.xml
+
