fix: fake `ext-redis` version

--- a/composer.json
+++ b/composer.json
@@ -92,7 +92,7 @@
     "prefer-stable": true,
     "config": {
         "platform": {
-            "php": "7.4.33"
+            "ext-redis": "4.3"
         },
         "allow-plugins": {
             "bamarni/composer-bin-plugin": true
