--- a/phpcs.xml.dist
+++ b/phpcs.xml.dist
@@ -1,6 +1,8 @@
 <?xml version="1.0"?>
 <ruleset xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="./vendor-bin/phpcs/vendor/squizlabs/php_codesniffer/phpcs.xsd">
-  <file>./src</file>
+  <file>./module</file>
+  <file>./public</file>
+  <file>./config</file>
   <file>./test</file>
 
   <exclude-pattern>*/vendor/*</exclude-pattern>
