--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -4,8 +4,7 @@
   backupGlobals="true"
   colors="true"
   executionOrder="random"
-  failOnRisky="true"
-  failOnWarning="true"
+  convertWarningsToExceptions="false"
 >
   <php>
     <ini name="date.timezone" value="UTC"/>
@@ -13,7 +12,7 @@
   </php>
   <testsuites>
     <testsuite name="Module Unit Test">
-      <directory suffix="Test.php">../module/**/test</directory>
+      <directory>../module/**/test</directory>
     </testsuite>
     <testsuite name="Address">
       <directory>./test/module/Address</directory>
