feat: VOL-3691 switch to Psr Container
BREAKING CHANGE: interop/container no longer supported

--- a/composer.json
+++ b/composer.json
@@ -46,7 +46,8 @@
         "laminas/laminas-view": "^2.23",
         "laminas/laminas-i18n": "^2.17",
         "laminas/laminas-serializer": "^2.13",
-        "laminas/laminas-eventmanager": "^3.5"
+        "laminas/laminas-eventmanager": "^3.5",
+        "psr/container": "^1.1|^2"
     },
     "autoload": {
         "classmap": [
