--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,9 @@
         "php": "^7.4",
         "ext-intl": "*",
         "ext-json": "*",
+        "ext-curl": "*",
+        "ext-redis": "*",
+        "ext-pdo": "*",
         "aws/aws-sdk-php": "^3.183",
         "beberlei/doctrineextensions": "^1.0",
         "caseyamcl/guzzle_retry_middleware": "^2.7.1",
