fix: fix local config undefined index

--- a/config/autoload/local.php.dist
+++ b/config/autoload/local.php.dist
@@ -18,7 +18,7 @@ $doctrine_connection_params = [
 
 return [
   'config_parameters' => [
-    'providers' => new \Laminas\Stdlib\ArrayUtils\MergeRemoveKey(),
+    'providers' => new \Laminas\Stdlib\ArrayUtils\MergeReplaceKey([]),
   ],
   'address' => [
     'client' => [
