feat: bump `olcs-logging` to `7.0.0`

--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,7 @@
         "league/flysystem": "^1.0",
         "league/flysystem-webdav": "1.0.10",
         "monolog/monolog": "^2.9",
-        "olcs/olcs-logging": "dev-migrate-to-laminas-cli-vol-3615",
+        "olcs/olcs-logging": "^7.0",
         "olcs/olcs-transfer": "^6.0.0",
         "olcs/olcs-utils": "^6.0.0",
         "olcs/olcs-xmltools": "^6.0.0",
