--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,7 @@
         "league/flysystem": "^1.0",
         "league/flysystem-webdav": "1.0.10",
         "monolog/monolog": "^2.9",
-        "olcs/olcs-logging": "^6.0.0",
+        "olcs/olcs-logging": "^7.0",
         "olcs/olcs-transfer": "^6.0.0",
         "olcs/olcs-utils": "^6.0.0",
         "olcs/olcs-xmltools": "^6.0.0",
@@ -42,7 +42,6 @@
         "lm-commons/lmc-rbac-mvc": "^3.3",
         "laminas/laminas-mail": "^2.16",
         "laminas/laminas-mvc": "^3.3",
-        "laminas/laminas-mvc-console": "^1.3",
         "laminas/laminas-mvc-i18n": "^1.4",
         "laminas/laminas-servicemanager": "^3.17",
         "laminas/laminas-http": "^2.16",
@@ -50,7 +49,8 @@
         "laminas/laminas-i18n": "^2.17",
         "laminas/laminas-serializer": "^2.13",
         "laminas/laminas-eventmanager": "^3.5",
-        "psr/container": "^1.1|^2"
+        "psr/container": "^1.1|^2",
+        "laminas/laminas-cli": "^1.5"
     },
     "autoload": {
         "classmap": [
