fix: Remove common dependency

--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,7 @@
         "league/flysystem-webdav": "1.0.10",
         "monolog/monolog": "^2.9",
         "olcs/olcs-logging": "^7.0",
-        "olcs/olcs-transfer": "^7.0.0",
+        "olcs/olcs-transfer": "~7.0.0",
         "olcs/olcs-utils": "^6.0.0",
         "olcs/olcs-xmltools": "~7.0.0",
         "oro/doctrine-extensions": "^2",
@@ -49,8 +49,7 @@
         "laminas/laminas-serializer": "^2.13",
         "laminas/laminas-eventmanager": "^3.5",
         "psr/container": "^1.1|^2",
-        "laminas/laminas-cli": "^1.5",
-        "olcs/olcs-common": "^7.0.0"
+        "laminas/laminas-cli": "^1.5"
     },
     "autoload": {
         "classmap": [
