--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
         "beberlei/doctrineextensions": "^1.0",
         "caseyamcl/guzzle_retry_middleware": "^2.7.1",
         "doctrine/doctrine-orm-module": "^5",
-        "doctrine/orm": "2.19.5",
+        "doctrine/orm": "^2.19.5",
         "doctrine/persistence": "^2.1",
         "dvsa/authentication-cognito": "^2.0",
         "dvsa/laminas-config-cloud-parameters": "^0.1.0",
