refactor: rationalise namespaces in olcs-backend.

--- a/composer.json
+++ b/composer.json
@@ -53,10 +53,10 @@
     },
     "autoload": {
         "classmap": [
-            "module/Olcs/Db/src"
+          "module/Db/src"
         ],
         "psr-4": {
-            "Olcs\\Db\\": "module/Olcs/Db/src",
+            "Dvsa\\Olcs\\Db\\": "module/Db/src",
             "Dvsa\\Olcs\\AcquiredRights\\": "module/AcquiredRights/src",
             "Dvsa\\Olcs\\Api\\": "module/Api/src",
             "Dvsa\\Olcs\\DocumentShare\\": "module/DocumentShare/src",
@@ -75,10 +75,10 @@
     },
     "autoload-dev": {
         "psr-4": {
-            "Dvsa\\Olcs\\Auth\\Test\\": "module/Auth/test",
-            "Dvsa\\Olcs\\CompaniesHouse\\Test\\": "module/CompaniesHouse/test",
-            "Dvsa\\Olcs\\Cpms\\Test\\": "module/Cpms/test",
-            "OlcsTest\\Db\\": "test/module/Olcs/Db/src",
+            "Dvsa\\OlcsTest\\Auth\\": "test/module/Auth/src",
+            "Dvsa\\OlcsTest\\CompaniesHouse\\": "test/module/CompaniesHouse/src",
+            "Dvsa\\OlcsTest\\Cpms\\": "test/module/Cpms/src",
+            "Dvsa\\OlcsTest\\Db\\": "test/module/Olcs/Db/src",
             "Dvsa\\OlcsTest\\": "test/src",
             "Dvsa\\OlcsTest\\Address\\": "test/module/Address/src",
             "Dvsa\\OlcsTest\\Api\\": "test/module/Api/src",
